--- a/filters/ptprince/ptdata/msi-amsmath.sty
+++ b/filters/ptprince/ptdata/msi-amsmath.sty
@@ -2,4 +2,5 @@
 %% Stuff peculiar to AMS math
 
 
-\def\AmS{\msihmode\msitag{<texlogo name="AmS">A<sub>m</sub>S</texlogo>}}
+\def\AmS{\msihmode\msitag{%
+   <math xmlns="http://www.w3.org/1998/Math/MathML"><msub><mtext>A</mtext><mi mathvariant="script">M</mi></msub></math>S}}
