--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1115,11 +1115,11 @@
 
 
 {\catcode`\$=11\relax
- \gdef\${\char`\$}
+ \gdef\${\char`\${}}
  \catcode`\_=11\relax
- \gdef\_{\char`\_}
+ \gdef\_{\char`\_{}}
  \catcode`\%=11\relax
- \gdef\%{\char`\%}
+ \gdef\%{\char`\%{}}
 }
 
 
