--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -98,6 +98,7 @@
 \MSITextElement[roman]{textrm}
 \MSITextElement[smallCaps]{textsc}
 \MSITextElement[emphasized]{emph}
+\MSITextElement{underline}
 
 
 
