More plot fixes, including fix for problem editing parametrized plot expressions in dialog. Also, camera settings now take effect in 3D plots.

--- a/prince/base/locale/en-us/dialogs/ComputeGraphSettings.dtd
+++ b/prince/base/locale/en-us/dialogs/ComputeGraphSettings.dtd
@@ -56,9 +56,11 @@
 <!ENTITY plotpointxcrosses.label    "X Crosses">
 
 <!ENTITY plotlinethickness.label  "Line Thickness">
+<!ENTITY plotlineverythin.label   "Very thin">
 <!ENTITY plotlinethin.label       "Thin">
 <!ENTITY plotlinemedium.label     "Medium">
 <!ENTITY plotlinethick.label      "Thick">
+<!ENTITY plotlineverythick.label  "Very thick">
 
 <!ENTITY plotadjust.label         "Adjust for discontinuities">
 <!ENTITY plotasymptote.label      "Show Asymptotes">
