--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -274,8 +274,8 @@
 <!ENTITY insertImageMapCmd.label "Image Map...">
 <!ENTITY insertLine.label "Line...">
 <!ENTITY insertline.accesskey "L">
-<!ENTITY insertFrame.label "Frame...">
-<!ENTITY insertframe.accesskey "F">
+<!ENTITY insertMinipage.label "Minipage...">
+<!ENTITY insertMinipage.accesskey "F">
 <!ENTITY insertTableCmd.label "Table...">
 <!ENTITY inserttable.accesskey "a">
 <!ENTITY insertFormMenu.label "Form...">
