--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -202,7 +202,7 @@ note=Note
 CrossRef=Cross Reference
 functiongraph=Function Graph
 IndexEntry=Index Entry
-msiFrame=Frame
+msiFrame=Minipage
 
 HorizontalSpace=Horizontal Space
 VerticalSpace=Vertical Space
