Restored changes to FrameOverlay that I backed out earlier

--- a/prince/base/locale/en-us/dialogs/Minipage.dtd
+++ b/prince/base/locale/en-us/dialogs/Minipage.dtd
@@ -47,7 +47,7 @@
 <!ENTITY unitLabel.label "Units">
 <!ENTITY  SizePlacement.label  "Size &amp; Placement">
 
-<!ENTITY Minipage.label "Minipage">
+<!ENTITY FrameTab.label "Frame">
 <!ENTITY Placementtab.label "Placement">
 
 <!ENTITY Minipage.borderLabel "Border">
