Fixed a problem with passing matrix delimiter prefs to the compute engine, and changed the insert matrix routines so that they carry a delimiter to use as the default. Changed preferences to allow for braces as delimiters.

--- a/prince/base/locale/en-us/dialogs/preferences.dtd
+++ b/prince/base/locale/en-us/dialogs/preferences.dtd
@@ -98,8 +98,9 @@
 
 <!ENTITY matrices.label           "Matrices">
 <!ENTITY matrix_none.label          "none">
-<!ENTITY matrix_brackets.label      "[]">
-<!ENTITY matrix_parens.label        "()">
+<!ENTITY matrix_brackets.label      "[ ]">
+<!ENTITY matrix_parens.label        "( )">
+<!ENTITY matrix_braces.label        "{ }">
 
 <!ENTITY logs.label               "Base of Log">
 <!ENTITY dots.label               "Dot Accent">
