--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -806,6 +806,9 @@
 \@namedef{msi@begin@alignat}{\bgroup\msi@dollar=0\relax$$\string\begin{alignat}}
 \@namedef{msi@end@alignat}{\string\end{alignat}$$\egroup}
 
+\def\msi@begin@math{\bgroup\msi@dollar=0\relax$\string\begin{math}}
+\def\msi@end@math{\string\end{math}$\egroup}
+
 
 \def\msi@begin@equation{\bgroup\msi@dollar=0\relax$$\string\begin{equation}}
 \def\msi@end@equation{\string\end{equation}$$\egroup}
