Shortened the text that appears in cross reference buttons

--- a/prince/base/locale/en-us/latex.dtd
+++ b/prince/base/locale/en-us/latex.dtd
@@ -10,5 +10,5 @@
 <!ENTITY  index         "Index: ">
 <!ENTITY  printindex    "Print index here">
 <!ENTITY  marker        "Marker: ">
-<!ENTITY  xref          "Cross reference: ">
+<!ENTITY  xref          "Cross ref: ">
 <!ENTITY  index         "Index: ">
