Fix for problems with Math/Text selection in dialog editors; fix for bug that disabled plotting last week; addition of Plot Item properties page to preferences dialog (this isn't quite debugged, but the other changes need to get in).

--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -74,6 +74,8 @@ Intervals.ZVar=z
 Intervals.AnimVar=Animation variable
 Intervals.polarXVar=theta
 Intervals.polarYVar=r
+Intervals.conformalXVar=Re z
+Intervals.conformalYVar=Im z
 Intervals.cyiindricalXVar=theta
 Intervals.cyiindricalYVar=z
 Intervals.cyiindricalZVar=r
