Added an option to open the last saved file instead of a shell, and added code to make it work.

--- a/prince/base/locale/en-us/dialogs/preferences.dtd
+++ b/prince/base/locale/en-us/dialogs/preferences.dtd
@@ -47,6 +47,7 @@
 <!ENTITY InitialViewIntervals.label  "Initial View Intervals">
 <!ENTITY General.label  "General">
 <!ENTITY Expert.label "Expert">
+<!ENTITY openLastFile.label "Open the last file saved, if it is present">
 
 
 <!ENTITY miscellaneousOptions.label "Miscellaneous Options">
