Finished implementing Insert/LaTeX Position Marker which is now the way to put in maketoc, maketitle, etc.

--- a/prince/base/locale/en-us/latex.dtd
+++ b/prince/base/locale/en-us/latex.dtd
@@ -7,6 +7,7 @@
 <!ENTITY  maketoc       "Make table of contents here">
 <!ENTITY  makelot       "Make list of tables here">
 <!ENTITY  makelof       "Make list of figures here">
+<!ENTITY  appendix      "Start appendices here">
 <!ENTITY  index         "Index: ">
 <!ENTITY  printindex    "Print index here">
 <!ENTITY  marker        "Marker: ">
