--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -627,19 +627,23 @@
 }
 
 \def\rule{%
-  \@ifnextchar[{\@rule}{\@rule[0pt]}%
+  \@ifnextchar[{\@rulea}{\@ruleb}}%
+\def\@rulea[#1]#2#3{%
+  \ifmmode
+     \string\rule[#1]\char123#2\char125\char123#3\char125
+  \else
+    \msitag{<msirule lift="#1" width="#2" height="#3" %
+                     style="vertical-align: #1; width: #2; height: #3; background-color: rgb(0, 0, 0);"/>}%
+  \fi
 }
-\def\@rule[#1]#2#3{%
-   \ifmmode
-      \string\rule[#1]\char123#2\char125\char123#3\char125
-   \else
-      \msitag{<msirule width="#2" height="#3" color="black" %
-                 style="vertical-align:0pt; width: #2; height: #3; background-color: black"/>}%
-   \fi
+\def\@ruleb#1#2{%
+  \ifmmode
+    \string\rule\char123#1\char125\char123#2\char125
+  \else
+    \msitag{<msirule lift="0" width="#1" height="#2" %
+                     style="vertical-align: 0; width: #1; height: #2; background-color: rgb(0, 0, 0);"/>}%
+  \fi
 }
-
-
-
 
 \def\hspace{%
    \@ifnextchar*{\@hspacestar}{\@hspace}}
