Handle some preamble TeX better. (See bug 2654) More to do.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -208,6 +208,7 @@
    \br\msitag{</head>}
    \br\msiopentag{body}{<body>}
    %%\msihmode\br\msiopentag{docbody}{<docbody>}%
+   \msipreambleextra
    \@paragraphs
    \msivmode
 }
