--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -179,7 +179,9 @@
 
 \MSIUnicode{euro}{20ac}
 \MSIUnicode{texteuro}{20ac}
-%\MSIUnicode{ldots}{2026}
+\MSIUnicode{vdots}{22ee}
+\MSIUnicode{ldots}{2026}
+\MSIUnicode{dots}{2026}
 \MSIUnicode{L}{141}
 \MSIUnicode{l}{142}
 \MSIUnicode{NG}{14a}
@@ -963,7 +965,7 @@
 \MSIMathQuote{Vdash}
 \MSIMathQuote{vDash}
 \MSIMathQuote{vdash}
-\MSIMathQuote{vdots}
+%\MSIMathQuote{vdots}
 \MSIMathQuote{veebar}
 \MSIMathQuote{vee}
 \MSIMathQuote{Vert}
